saista-order/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: dev
  labels:
    app: order-service
spec:
  type: ClusterIP
  selector:
    app: order-service
  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5002
